--- a/style.css
+++ b/style.css
@@ -165,15 +165,7 @@ body{
     /*align-items: center; */
     /*justify-content: center;
     /*height: 100px;
-    z-index: 2;
-    height: 70px;
-    padding: 0 30px;
-    background: #fff;
-    border-radius: 5px 5px 0 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1); */
+    */
 }
 
 .quiz_box header .title{
